--- a/p01/Relatorio/Relatorio.tex
+++ b/p01/Relatorio/Relatorio.tex
@@ -52,7 +52,7 @@
 
 \title{Trocas de Contexto} % Title
 \author{Gabriel Souza e Silva \and Gustavo Cordeiro Libel} % Author name
-\date{Abril de 2016} % Date for the report
+\date{Abril de 2018} % Date for the report
 
 \begin{document}
 
@@ -101,16 +101,18 @@ pega contexto
 aloca espaço para stack
 
 
-1. Explicar o objetivo e os parâmetros de cada uma das quatro funções acima.
+\section*{1. Explicar o objetivo e os parâmetros de cada uma das quatro funções acima.}
 
-2. Explicar o significado dos campos da estrutura ucontext\_t que foram utilizados no código.
+\section*{2. Explicar o significado dos campos da estrutura ucontext\_t que foram utilizados no código.}
+\begin{itemize}
+	\item ContextPong.uc\_stack.ss\_sp = stack ;
+	\item ContextPong.uc\_stack.ss\_size = STACKSIZE;
+	\item ContextPong.uc\_stack.ss\_flags = 0;
+	\item ContextPong.uc\_link = 0;
+\end{itemize}
 
-ContextPong.uc\_stack.ss\_sp = stack ;
-ContextPong.uc\_stack.ss\_size = STACKSIZE;
-ContextPong.uc\_stack.ss\_flags = 0;
-ContextPong.uc\_link = 0;
 
-3. Explicar cada linha do código de pingpong.c que chame uma dessas funções ou que manipule estruturas do tipo ucontext\_t .
+\section*{3. Explicar cada linha do código de pingpong.c que chame uma dessas funções ou que manipule estruturas do tipo ucontext\_t .}
 
 \begin{table}[H]
 	\centering
@@ -122,15 +124,23 @@ ContextPong.uc\_link = 0;
 		Linhas 44/48  & Salva o contexto atual em ContextPong e restaura o contexto de ContextPing.\\
 		Linha 59      & Salva o contexto atual em ContextPing.  \\ \myrowcolour
 		Linha 63 a 67 & \begin{tabular}[c]{@{}l@{}}Ajusta os valores de uc\_stack.ss\_sp, uc\_stack.ss\_size, \\ uc\_stack.ss\_flags, uc\_link de ContextPing.\end{tabular} \\
-		Linha 75      & Ajusta os valores internos de ContextPing, set função BodyPing e seus argumentos\\ \myrowcolour
+		Linha 75      & \begin{tabular}[c]{@{}l@{}}Ajusta os valores internos de ContextPing, \\ set função BodyPing e seus argumentos\end{tabular} \\ \myrowcolour
 		Linha 77      & Salva o contexto atual em ContextPong. \\
 		Linha 82 a 85 & \begin{tabular}[c]{@{}l@{}}Ajusta os valores de uc\_stack.ss\_sp, uc\_stack.ss\_size, \\ uc\_stack.ss\_flags, uc\_link de ContextPong.\end{tabular} \\ \myrowcolour
-		Linha 93      & Ajusta os valores internos de ContextPong, set função BodyPong e seus argumentos  \\
+		Linha 93      & \begin{tabular}[c]{@{}l@{}} Ajusta os valores internos de ContextPong,\\ set função BodyPong e seus argumentos \end{tabular} \\
 		Linha 95      & Salva o contexto atual em ContextMain e restaura o contexto de ContextPing.   \\ \myrowcolour
 		Linha 96      & Salva o contexto atual em ContextMain e restaura o contexto de ContextPong.    \\ \hline                                                                    
 	\end{tabular}
 \end{table}
 
-4. Desenhar o diagrama de tempo da execução.
+\section*{4. Desenhar o diagrama de tempo da execução}
+
+\begin{figure}[H]
+	\begin{center}
+		\fbox{\includegraphics[width=\textwidth]{files/diagrama.png}} % Include the image 
+		%\caption{Exorbitante}
+		\label{img:diag}
+	\end{center}
+\end{figure}
 
 \end{document}
