--- a/p01/Relatorio/Relatorio.tex
+++ b/p01/Relatorio/Relatorio.tex
@@ -127,7 +127,7 @@ Tamanho do espaço de memória alocado para o contexto.
 
 
 \subsection{ContextPong.uc\_link}
-Ponteiro para o contexto.
+Ponteiro para próximo contexto caso o contexto atual retorne. 
 
 
 \section{Explicação de cada linha do código de contexts.c que chame uma dessas funções ou que manipule estruturas do tipo ucontext\_t}
